<resources>
    <string name="app_name">Batik Snap</string>
    <string name="camera">Camera</string>
    <string name="gallery">Galeri</string>
    <string name="message">Insert Your Batik Photo</string>
    <string name="desc_gambar">deskripsi gambar</string>
    <string name="upload">Upload</string>
    <string name="message2">Upload Your Image</string>
    <string name="image_item">Image Item Batik</string>
    <string name="image_detail">Detail Image</string>
    <string name="description">Deskripsi :</string>
    <string name="from">Asal :</string>
    <string name="history">Sejarah :</string>
    <string name="captureImage">Capture Image</string>
    <string name="switch_camera">Switch Camera</string>
    <string name="prev_img">Preview Image Description</string>
    <string name="scn_img">Second Image Description</string>
    <string name="storyImage">Deskripsi untuk gambar cerita</string>
    <string name="storyName">Nama Cerita</string>
    <string name="storyDescription">Deskripsi Cerita</string>
    <string name="splash_image_description">Splash image</string>
    <string name="back">back\n</string>
    <string name="description_for_image">Login Page</string>
    <string name="title_login_page">Welcome Back</string>
    <string name="input">Input your account!</string>
    <string name="password">Password</string>
    <string name="login">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="email">Email</string>
    <string name="title_signup_page">Sign Up!</string>
    <string name="name">Name</string>
    <string name="email_hint">Enter your email</string>
    <string name="name_hint">Enter your name</string>
    <string name="password_hint">Enter your password</string>
    <string name="logout">Log Out</string>
    <string name="batikImage">photoUrl %s</string>
    <string name="batikDeskripsi">description %s</string>
    <string name="batikName">name %s</string>
</resources>