<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/previewImageView"
        android:layout_width="200dp"
        android:layout_height="160dp"
        android:scaleType="centerCrop"
        android:layout_marginTop="40dp"
        android:src="@drawable/image_upload_bro"
        android:contentDescription="@string/prev_img"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message2"
        android:textStyle="bold"
        android:textSize="20sp"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/purple_500"
        app:layout_constraintBottom_toTopOf="@+id/secondImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/previewImageView" />

    <ImageView
        android:id="@+id/secondImageView"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:src="@drawable/baseline_photo_24"
        android:contentDescription="@string/scn_img"
        app:layout_constraintBottom_toTopOf="@+id/uploadButton"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/uploadButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="80dp"
        android:text="@string/upload"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
