<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="15dp"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="12dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageView
                android:id="@+id/img_batik"
                android:layout_width="match_parent"
                android:layout_height="205dp"
                android:contentDescription="@string/image_detail"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ic_launcher_background"/>

            <TextView
                android:id="@+id/title_batik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:fontFamily="sans-serif-medium"
                android:layout_marginTop="16dp"
                android:layout_marginStart="2dp"
                tools:text="Batik" />

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:fontFamily="sans-serif-medium"
                android:layout_marginTop="6dp"
                android:layout_marginStart="2dp"
                android:text="@string/description"
                android:background="@color/bg_text"/>

            <TextView
                android:id="@+id/desc_batik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:fontFamily="sans-serif-medium"
                android:layout_marginStart="2dp"
                tools:text="Batik"
                android:background="@color/bg_text"/>


            <TextView
                android:id="@+id/tv_asal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:fontFamily="sans-serif-medium"
                android:layout_marginTop="17dp"
                android:layout_marginStart="2dp"
                android:text="@string/from"
                android:background="@color/bg_text"/>

            <TextView
                android:id="@+id/fr_batik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:fontFamily="sans-serif-medium"
                android:layout_marginStart="2dp"
                tools:text="Asal Batik"
                android:background="@color/bg_text"/>

            <TextView
                android:id="@+id/tv_sejarah"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:fontFamily="sans-serif-medium"
                android:layout_marginTop="17dp"
                android:layout_marginStart="2dp"
                android:text="@string/history"
                android:background="@color/bg_text"/>

            <TextView
                android:id="@+id/hs_batik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:fontFamily="sans-serif-medium"
                android:layout_marginStart="2dp"
                tools:text="Sejarah Batik"
                android:background="@color/bg_text"/>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</ScrollView>
